--- a/templates/activitytree/welcome.html
+++ b/templates/activitytree/welcome.html
@@ -122,7 +122,7 @@ body {
              {% if user.is_authenticated %}
                <a class="media-heading" href="/{{c.root.id }}{{c.root.uri }}?nav=continue" role="button"> <h4>{{c.root.name}} &raquo;</h4></a>
              {% else %}
-                <a class="media-heading" href="/{{c.root.id }}{{c.root.uri }}" role="button"> <h5>{{c.root.name}} &raquo;</h5></a>
+                <a class="media-heading" href="/{{c.root.id }}{{c.root.uri }}" role="button"> <h4>{{c.root.name}} &raquo;</h4></a>
              {% endif %}
 
 
@@ -148,7 +148,7 @@ body {
       <hr>
 
       <footer>
-        <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>
+        <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-a/4.0/88x31.png" /></a>
             <br />El contenido de los cursos es: <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a> y
             otras licencias abiertas.</p>
       </footer>
