--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -353,7 +353,7 @@ code {
             });
 
 
-            $("#user_points").html("("+ puntos_totales+" puntos)");
+            $("#user_points").html("("+ Math.floor(puntos_totales)+" puntos)");
 
 
 
