--- a/templates/activitytree/dashboard.html
+++ b/templates/activitytree/dashboard.html
@@ -109,7 +109,7 @@
  <div class="list-group-item">
                 <div class="row">
                     <div class="col-md-4">
-                    <a href="/[[root_id]][[uri]]">
+                    <a href="/[[path_id]][[uri]]">
                         <p class="list-group-item-text"><i class="fa [[icon]]"></i>
                          [[name]]
                          </p>
