--- a/templates/activitytree/welcome.html
+++ b/templates/activitytree/welcome.html
@@ -73,7 +73,11 @@ body {
            {% if user.is_authenticated %}
             <li><a href="#"></a></li>
             <li><a href="#"> {{ user.first_name }} {{ user.last_name }}</a></li>
-            <li><a class="navbar-user" href="#"><img src="http://graph.facebook.com/{{user.email}}/picture?type=square"/>  </a></li>
+            <li><a class="navbar-user" href="#">
+                {%  if user.userprofile.facebook_uid %}
+                <img src="http://graph.facebook.com/{{ user.userprofile.facebook_uid}}/picture?type=square"/>  </a>
+               {% endif %}
+            </li>
             <li><a href="/logout">Log out</a></li>
 
 
