--- a/templates/activitytree/welcome.html
+++ b/templates/activitytree/welcome.html
@@ -1,3 +1,5 @@
+{% load gravatar %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -72,11 +74,18 @@ body {
 
            {% if user.is_authenticated %}
             <li><a href="#"></a></li>
+            {% if user.first_name %}
             <li><a href="#"> {{ user.first_name }} {{ user.last_name }}</a></li>
+            {% else %}
+            <li><a href="#"> {{ user.username }} </a></li>
+            {% endif %}
             <li><a class="navbar-user" href="#">
                 {%  if user.userprofile.facebook_uid %}
                 <img src="http://graph.facebook.com/{{ user.userprofile.facebook_uid}}/picture?type=square"/>  </a>
+               {% else %}
+                <img src="{% gravatar_url user.email 50%}">
                {% endif %}
+
             </li>
             <li><a href="/logout">Log out</a></li>
 
