--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -53,7 +53,7 @@
 
 
   <div class="col-md-6">
-      <a id="loginGoogle" class="btn btn-block btn-social btn-google-plus disabled"><i class="fa fa-google-plus"></i>
+      <a id="loginGoogle" class="btn btn-block btn-social btn-google-plus"><i class="fa fa-google-plus"></i>
        Regístrate con Google </a>
   </div>
 </div>
@@ -68,6 +68,96 @@
 
 
 {% block scripts %}
+  <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer>
+  </script>
+<script>
+            function getCookie(name) {
+                var cookieValue = null;
+                if (document.cookie && document.cookie != '') {
+                    var cookies = document.cookie.split(';');
+                    for (var i = 0; i < cookies.length; i++) {
+                        var cookie = jQuery.trim(cookies[i]);
+                        // Does this cookie string begin with the name we want?
+                        if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                            cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                            break;
+                        }
+                    }
+                }
+                return cookieValue;
+            }
+
+    function csrfSafeMethod(method) {
+                // these HTTP methods do not require CSRF protection
+                return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+            }
+            $.ajaxSetup({
+                crossDomain: false, // obviates need for sameOrigin test
+                beforeSend: function(xhr, settings) {
+                    if (!csrfSafeMethod(settings.type)) {
+                        var csrftoken = getCookie('csrftoken');
+
+
+                        xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                    }
+                }
+            });
+
+
+
+    function start() {
+      gapi.load('auth2', function() {
+        auth2 = gapi.auth2.init({
+          client_id: '95891402620-36t537m45mim9todkv6vno7k6lqbpqvp.apps.googleusercontent.com',
+          'scope': 'profile email'
+          // Scopes to request in addition to 'profile' and 'email'
+          //scope: 'additional_scope'
+        });
+      });
+    }
+    $( document ).ready(function() {
+    $('#loginGoogle').click(function() {
+    // signInCallback defined in step 6.
+    auth2.grantOfflineAccess({'redirect_uri': 'postmessage'}).then(function(authResult) {
+        if (authResult['code']) {
+
+    // Hide the sign-in button now that the user is authorized, for example:
+    //$('#signinButton').attr('style', 'display: none');
+
+    // Send the code to the server
+    $.ajax({
+      type: 'POST',
+      url: '/GoogleCallback',
+      contentType: 'application/json',
+      success: function(result) {
+        // Handle or verify the server response.
+          ///alert(result.result);
+
+          window.location.href=result.after_login;
+
+      },
+      processData: false,
+      dataType: "json",
+      data: JSON.stringify({code:authResult['code']}),
+      error: function(jqXHR, textStatus, errorThrown) {
+                        alert ("Error:" + textStatus+" "+errorThrown+" "+jqXHR.responseText);
+                        }
+
+    });
+    }
+        else {
+    // There was an error.
+  }
+
+
+
+        });
+
+    });
+
+     });
+  </script>
+
 
 
 {% endblock scripts %}
