--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -4,9 +4,8 @@
 {% blocktrans %}Greetings{% endblocktrans %} {% if user.get_full_name %}{{ user.get_full_name }}{% else %}{{ user }}{% endif %},
 
 {% blocktrans %}
-You are receiving this email because you (or someone pretending to be you)
-requested that your password be reset on the {{ domain }} site.  If you do not 
-wish to reset your password, please ignore this message.
+You are receiving this email because you (or someone pretending to be you) requested that your password be reset on the {{ domain }} site.
+If you do not wish to reset your password, please ignore this message.
 {% endblocktrans %}
 
 {% blocktrans %}
@@ -19,8 +18,10 @@ into your web browser:
 {% blocktrans %}Your username, in case you've forgotten:{% endblocktrans %} {{ user.username }}
 
 
-{% blocktrans %}Best regards{% endblocktrans %},
-{{ site_name }} {% blocktrans %}Management{% endblocktrans %}
+    {% blocktrans with site_name=site.name %}
+    Sincerely,
+    {{ site_name }} Management
+    {% endblocktrans %}
 
 
 {# This is used by django.contrib.auth #}
