--- a/templates/registration/activation_email.html
+++ b/templates/registration/activation_email.html
@@ -10,9 +10,8 @@
 <body>
 <p>
     {% blocktrans with site_name=site.name %}
-    You (or someone pretending to be you) have asked to register an account at
-    {{ site_name }}.  If this wasn't you, please ignore this email
-    and your address will be removed from our records.
+    You (or someone pretending to be you) have asked to register an account at {{ site_name }}.
+    If this wasn't you, please ignore this email and your address will be removed from our records.
     {% endblocktrans %}
 </p>
 <p>
